; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/ndis/extr_kern_windrv.c_release_fpu_cc_ent.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/ndis/extr_kern_windrv.c_release_fpu_cc_ent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpu_cc_ent = type { i32 }

@fpu_busy_mtx = common dso_local global i32 0, align 4
@entries = common dso_local global i32 0, align 4
@fpu_free_mtx = common dso_local global i32 0, align 4
@fpu_free_head = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fpu_cc_ent*)* @release_fpu_cc_ent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_fpu_cc_ent(%struct.fpu_cc_ent* %0) #0 {
  %2 = alloca %struct.fpu_cc_ent*, align 8
  store %struct.fpu_cc_ent* %0, %struct.fpu_cc_ent** %2, align 8
  %3 = call i32 @mtx_lock(i32* @fpu_busy_mtx)
  %4 = load %struct.fpu_cc_ent*, %struct.fpu_cc_ent** %2, align 8
  %5 = load i32, i32* @entries, align 4
  %6 = call i32 @LIST_REMOVE(%struct.fpu_cc_ent* %4, i32 %5)
  %7 = call i32 @mtx_unlock(i32* @fpu_busy_mtx)
  %8 = call i32 @mtx_lock(i32* @fpu_free_mtx)
  %9 = load %struct.fpu_cc_ent*, %struct.fpu_cc_ent** %2, align 8
  %10 = load i32, i32* @entries, align 4
  %11 = call i32 @LIST_INSERT_HEAD(i32* @fpu_free_head, %struct.fpu_cc_ent* %9, i32 %10)
  %12 = call i32 @mtx_unlock(i32* @fpu_free_mtx)
  ret void
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @LIST_REMOVE(%struct.fpu_cc_ent*, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @LIST_INSERT_HEAD(i32*, %struct.fpu_cc_ent*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
